--- a/config/deploy.rb.example
+++ b/config/deploy.rb.example
@@ -8,18 +8,14 @@ set :deploy_to, "/usr/local/src/#{fetch(:application)}"
 
 set :scm, :git
 set :keep_releases, 10
-set :runner, ""
 set :use_sudo, true
 
 set :ssh_options, {
   keys: [File.expand_path('~/.ssh/id_rsa')],
   forward_agent: true,
   auth_methods: %w(publickey),
-  #verbose: :debug
+  #verbose: :debug  # NOTE: Uncomment when you need to debug ssh connection failure.
 }
-
-# Prevent assertion for rails
-set :normalize_asset_timestamps, false
 
 namespace :deploy do
   after :started, "deploy:preparation"
@@ -29,17 +25,11 @@ namespace :deploy do
   desc 'Restart application'
   task :restart do
     on roles(:app), in: :sequence, wait: 5 do
-      # Your restart mechanism here, for example:
-      # execute :touch, release_path.join('tmp/restart.txt')
     end
   end
 
   after :restart, :clear_cache do
     on roles(:web), in: :groups, limit: 3, wait: 10 do
-      # Here we can do anything such as:
-      # within release_path do
-      #   execute :rake, 'cache:clear'
-      # end
     end
   end
 
